<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:iconTint="@color/primaryColor"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        android:background="@drawable/transparent_background"/>
    <item
        android:id="@+id/navigation_following"
        android:icon="@drawable/ic_following"
        android:title="@string/following" />
    <item
        android:id="@+id/navigation_create_post"
        android:icon="@drawable/ic_add"
        android:title=""
        android:enabled="true" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>
