<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.MediaPreviewActivity">

    <!-- Vista previa de la imagen -->
    <ImageView
        android:id="@+id/imageViewPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:visibility="gone" />

    <!-- Vista previa del video -->
    <VideoView
        android:id="@+id/videoViewPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@drawable/transparent_background"
        android:visibility="gone" />

    <!-- Vista previa del audio -->
    <RelativeLayout
        android:id="@+id/audioPreviewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="16dp"
        android:background="@drawable/rounded_edittext_background_no_border"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/audioPlayPauseButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_play_arrow"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/play_pause_description"
            app:tint="@color/white" />

        <SeekBar
            android:id="@+id/audioSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/audioPlayPauseButton"
            android:layout_marginStart="8dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <!-- Botón para cancelar -->
    <ImageButton
        android:id="@+id/cancelButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_cancel"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/cancel_action_description"
        app:tint="@color/green" />

    <!-- Botón para enviar -->
    <ImageButton
        android:id="@+id/sendButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_send"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/send_action_description"
        app:tint="@color/green" />
</RelativeLayout>
